--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
         <div class="u-custom-menu u-nav-container">
           <ul class="u-nav u-spacing-30 u-unstyled u-nav-1">
             <li class="u-nav-item"><a
-                class="u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
+                class="u-button-style u-nav-link u-text-active-palette-2-base u-text-grey-90 u-text-hover-grey-90"
                 href="うち.html" style="padding: 14px 0px;">うち</a>
             </li>
             <li class="u-nav-item"><a
-                class="u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
+                class="u-button-style u-nav-link u-text-active-palette-2-base u-text-grey-90 u-text-hover-grey-90"
                 href="えいが.html" style="padding: 14px 0px;">えいが</a>
             </li>
             <li class="u-nav-item"><a
-                class="u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
+                class="u-button-style u-nav-link u-text-active-palette-2-base u-text-grey-90 u-text-hover-grey-90"
                 href="ミュージック.html" style="padding: 14px 0px;">ミュージック</a>
             </li>
             <li class="u-nav-item"><a
-                class="u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
+                class="u-button-style u-nav-link u-text-active-palette-2-base u-text-grey-90 u-text-hover-grey-90"
                 style="padding: 14px 0px;">フォト</a>
             </li>
           </ul>
@@ -351,7 +351,7 @@
     </div>
   </section>
   <section class="u-clearfix u-section-4" id="sec-bfe0">
-    <div class="u-clearfix u-sheet u-sheet-1">
+    <div class="u-clearfix u-sheet u-valign-top-md u-valign-top-sm u-sheet-1">
       <div class="u-video u-video-contain u-video-1" data-animation-name="" data-animation-duration="0"
         data-animation-delay="0" data-animation-direction="">
         <div class="embed-responsive embed-responsive-1">
