--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <div class="u-expanded-width-xs u-video u-video-contain u-video-1">
             <div class="embed-responsive embed-responsive-1">
               <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item"
-                data-src="https://www.youtube.com/embed/odM92ap8_c0?mute=1&amp;showinfo=1&amp;controls=1&amp;start=0"
+                data-src="https://www.youtube.com/embed/odM92ap8_c0?mute=0&amp;showinfo=1&amp;controls=1&amp;start=0"
                 data-poster="images/Godzilla-Kong-Film-5421a1.jpg" frameborder="0" allowfullscreen=""></iframe>
               <button class="u-video-poster u-video-poster-1" data-src="images/Godzilla-Kong-Film-5421a1.jpg"></button>
             </div>
@@ -272,7 +272,7 @@
             target="_blank"> 今見る</a>
         </div>
       </div>
-      <div class="u-align-center u-carousel-item u-clearfix u-palette-4-light-3 u-section-2-8">
+      <div class="u-align-center u-carousel-item u-clearfix u-white u-section-2-8">
         <div class="u-clearfix u-sheet u-sheet-1">
           <h2 class="u-text u-text-default u-text-1"> A Silent Voice (<b></b> 聲の形<b>)</b>
           </h2>
