--- a/うち.html
+++ b/うち.html
@@ -97,7 +97,7 @@
             <h2 class="u-text u-text-default u-text-1">Godzilla vs Kong (キングコング対ゴジラ)</h2>
             <div class="u-expanded-width-xs u-video u-video-contain u-video-1">
               <div class="embed-responsive embed-responsive-1">
-                <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" data-src="https://www.youtube.com/embed/odM92ap8_c0?mute=1&amp;showinfo=1&amp;controls=1&amp;start=0" data-poster="images/Godzilla-Kong-Film-5421a1.jpg" frameborder="0" allowfullscreen=""></iframe>
+                <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" data-src="https://www.youtube.com/embed/odM92ap8_c0?mute=0&amp;showinfo=1&amp;controls=1&amp;start=0" data-poster="images/Godzilla-Kong-Film-5421a1.jpg" frameborder="0" allowfullscreen=""></iframe>
                 <button class="u-video-poster u-video-poster-1" data-src="images/Godzilla-Kong-Film-5421a1.jpg"></button>
               </div>
             </div>
@@ -180,7 +180,7 @@
             <a href="https://dongphym.co/en/movie/lac-vao-khu-rung-dom-dom-into-the-forest-of-fireflies-light-hotarubi-no-mori-e-2011_1crynQbW.html" class="u-border-2 u-border-palette-1-dark-2 u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-white u-btn-1" target="_blank"> 今見る</a>
           </div>
         </div>
-        <div class="u-align-center u-carousel-item u-clearfix u-palette-4-light-3 u-section-2-8">
+        <div class="u-align-center u-carousel-item u-clearfix u-white u-section-2-8">
           <div class="u-clearfix u-sheet u-sheet-1">
             <h2 class="u-text u-text-default u-text-1"> A Silent Voice (<b></b> 聲の形<b>)</b>
             </h2>
