--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <button class="u-video-poster u-video-poster-1" data-src="images/Godzilla-Kong-Film-5421a1.jpg"></button>
             </div>
           </div>
-          <a href="https://phimmoiplus.net/info/godzilla-dai-chien-kong-pm8757"
+          <a href="https://phimmoiplus.net/xem/godzilla-dai-chien-kong-pm89305"
             class="u-border-2 u-border-palette-1-dark-2 u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-white u-btn-1"
             target="_blank"> 今見る</a>
         </div>
@@ -182,7 +182,7 @@
               <button class="u-video-poster u-video-poster-1" data-src="images/A-Quiet-Place-film.jpg"></button>
             </div>
           </div>
-          <a href="https://phimmoiplus.net/info/vung-dat-cam-lang-pm390"
+          <a href="https://phimmoiplus.net/xem/vung-dat-cam-lang-pm390"
             class="u-border-2 u-border-palette-1-dark-2 u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-white u-btn-1"
             target="_blank"> 今見る</a>
         </div>
@@ -199,7 +199,7 @@
               <button class="u-video-poster u-video-poster-1" data-src="images/quiet-place-2.jpg"></button>
             </div>
           </div>
-          <a href="https://phimmoiplus.net/info/vung-dat-cam-lang-2-pm7931"
+          <a href="https://phimmoiplus.net/xem/vung-dat-cam-lang-2-pm73099"
             class="u-border-2 u-border-palette-1-dark-2 u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-white u-btn-1"
             target="_blank"> 今見る</a>
         </div>
@@ -216,7 +216,7 @@
                 data-src="images/The-Suicide-Squad-Online-Quad-1200.jpg"></button>
             </div>
           </div>
-          <a href="https://vphimzz.net/phim/the-suicide-squad-biet-doi-cam-tu-AHAFE/"
+          <a href="https://vphimzz.net/xem-phim/the-suicide-squad-biet-doi-cam-tu-AHAFE/full-hd.html"
             class="u-border-2 u-border-palette-1-dark-2 u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-white u-btn-1"
             target="_blank"> 今見る</a>
         </div>
@@ -267,7 +267,7 @@
                 data-src="images/MV5BM2FkZjM5ODUtMGM0OC00ZTk2LWFjZDYtNmIzMGRhZWY0MjExXkEyXkFqcGdeQXVyNDgyODgxNjE._V1_1.jpg"></button>
             </div>
           </div>
-          <a href="https://dongphym.co/en/movie/lac-vao-khu-rung-dom-dom-into-the-forest-of-fireflies-light-hotarubi-no-mori-e-2011_1crynQbW.html"
+          <a href="https://dongphym.co/movie/-lac-vao-khu-rung-dom-dom-into-the-forest-of-fireflies-light-hotarubi-no-mori-e-2011_8KMtQgKA.html"
             class="u-border-2 u-border-palette-1-dark-2 u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-white u-btn-1"
             target="_blank"> 今見る</a>
         </div>
