--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="自分を信じて">
   <meta name="description" content="​このウェブサイトは、退屈で退屈な流行の日の精神を強化することを目的として作成されました">
   <meta name="page_type" content="np-template-header-footer-from-plugin">
-  <title>うち</title>
+  <title>お願いだから泣かないで</title>
   <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
