--- a/うち.html
+++ b/うち.html
@@ -221,14 +221,14 @@
                 <div class="u-container-layout u-container-layout-2">
                   <h2 class="u-align-center u-text u-text-default u-text-1"> 魂をリラックスさせる小さな音楽</h2>
                   <p class="u-align-center u-text u-text-2"> 歌詞のない音楽やサウンドトラックの音楽は、変動するムードに非常に適しています</p>
-                  <div class="u-video u-video-contain u-video-1">
+                  <div class="u-video u-video-cover u-video-1">
                     <div class="embed-responsive embed-responsive-1">
-                      <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://player.vimeo.com/video/587649951?loop=0&amp;muted=0&amp;title=0" frameborder="0" allowfullscreen=""></iframe>
+                      <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/sOrvzpIT9CM?mute=0&amp;showinfo=0&amp;controls=0&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
                     </div>
                   </div>
                   <div class="u-video u-video-contain u-video-2">
                     <div class="embed-responsive embed-responsive-2">
-                      <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://player.vimeo.com/video/587651336?loop=0&amp;muted=0&amp;title=0" frameborder="0" allowfullscreen=""></iframe>
+                      <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/VNdHd1asf9s?mute=0&amp;showinfo=0&amp;controls=0&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
                     </div>
                   </div>
                 </div>
@@ -240,14 +240,14 @@
     </section>
     <section class="u-clearfix u-section-4" id="sec-bfe0">
       <div class="u-clearfix u-sheet u-valign-top-md u-valign-top-sm u-sheet-1">
-        <div class="u-video u-video-contain u-video-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
+        <div class="u-video u-video-contain u-video-1">
           <div class="embed-responsive embed-responsive-1">
-            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://player.vimeo.com/video/587652229?loop=0&amp;muted=0&amp;title=0" frameborder="0" allowfullscreen=""></iframe>
+            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/lNHLoSgCL9c?mute=0&amp;showinfo=0&amp;controls=0&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
           </div>
         </div>
-        <div class="u-video u-video-contain u-video-2" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
+        <div class="u-video u-video-contain u-video-2">
           <div class="embed-responsive embed-responsive-2">
-            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://player.vimeo.com/video/587653311?loop=0&amp;muted=0&amp;title=0" frameborder="0" allowfullscreen=""></iframe>
+            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/i0LRtNwiORY?mute=0&amp;showinfo=0&amp;controls=0&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
           </div>
         </div>
         <a href="#" class="u-border-none u-btn u-btn-round u-button-style u-palette-2-light-1 u-radius-29 u-btn-1"> リストに移動</a>
