--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <button class="u-video-poster u-video-poster-1" data-src="images/Godzilla-Kong-Film-5421a1.jpg"></button>
             </div>
           </div>
-          <a href="https://phimmoiplus.net/xem/godzilla-dai-chien-kong-pm89305"
+          <a href="https://phimmoiplus.net/info/godzilla-dai-chien-kong-pm8757"
             class="u-border-2 u-border-palette-1-dark-2 u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-white u-btn-1"
             target="_blank"> 今見る</a>
         </div>
@@ -182,7 +182,7 @@
               <button class="u-video-poster u-video-poster-1" data-src="images/A-Quiet-Place-film.jpg"></button>
             </div>
           </div>
-          <a href="https://phimmoiplus.net/xem/vung-dat-cam-lang-pm390"
+          <a href="https://phimmoiplus.net/info/vung-dat-cam-lang-pm390"
             class="u-border-2 u-border-palette-1-dark-2 u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-white u-btn-1"
             target="_blank"> 今見る</a>
         </div>
@@ -199,7 +199,7 @@
               <button class="u-video-poster u-video-poster-1" data-src="images/quiet-place-2.jpg"></button>
             </div>
           </div>
-          <a href="https://phimmoiplus.net/xem/vung-dat-cam-lang-2-pm73099"
+          <a href="https://phimmoiplus.net/info/vung-dat-cam-lang-2-pm7931"
             class="u-border-2 u-border-palette-1-dark-2 u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-white u-btn-1"
             target="_blank"> 今見る</a>
         </div>
@@ -216,7 +216,7 @@
                 data-src="images/The-Suicide-Squad-Online-Quad-1200.jpg"></button>
             </div>
           </div>
-          <a href="https://vphimzz.net/xem-phim/the-suicide-squad-biet-doi-cam-tu-AHAFE/full-hd.html"
+          <a href="https://vphimzz.net/phim/the-suicide-squad-biet-doi-cam-tu-AHAFE/"
             class="u-border-2 u-border-palette-1-dark-2 u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-white u-btn-1"
             target="_blank"> 今見る</a>
         </div>
@@ -267,7 +267,7 @@
                 data-src="images/MV5BM2FkZjM5ODUtMGM0OC00ZTk2LWFjZDYtNmIzMGRhZWY0MjExXkEyXkFqcGdeQXVyNDgyODgxNjE._V1_1.jpg"></button>
             </div>
           </div>
-          <a href="https://dongphym.co/movie/-lac-vao-khu-rung-dom-dom-into-the-forest-of-fireflies-light-hotarubi-no-mori-e-2011_8KMtQgKA.html"
+          <a href="https://dongphym.co/en/movie/lac-vao-khu-rung-dom-dom-into-the-forest-of-fireflies-light-hotarubi-no-mori-e-2011_1crynQbW.html"
             class="u-border-2 u-border-palette-1-dark-2 u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-white u-btn-1"
             target="_blank"> 今見る</a>
         </div>
@@ -327,20 +327,20 @@
               <div class="u-container-layout u-container-layout-2">
                 <h2 class="u-align-center u-text u-text-default u-text-1"> 魂をリラックスさせる小さな音楽</h2>
                 <p class="u-align-center u-text u-text-2"> 歌詞のない音楽やサウンドトラックの音楽は、変動するムードに非常に適しています</p>
-                <div class="u-video u-video-contain u-video-1">
+                <div class="u-video u-video-cover u-video-1">
                   <div class="embed-responsive embed-responsive-1">
                     <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;"
                       class="embed-responsive-item"
-                      src="https://player.vimeo.com/video/587649951?loop=0&amp;muted=0&amp;title=0" frameborder="0"
-                      allowfullscreen=""></iframe>
+                      src="https://www.youtube.com/embed/sOrvzpIT9CM?mute=0&amp;showinfo=0&amp;controls=0&amp;start=0"
+                      frameborder="0" allowfullscreen=""></iframe>
                   </div>
                 </div>
                 <div class="u-video u-video-contain u-video-2">
                   <div class="embed-responsive embed-responsive-2">
                     <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;"
                       class="embed-responsive-item"
-                      src="https://player.vimeo.com/video/587651336?loop=0&amp;muted=0&amp;title=0" frameborder="0"
-                      allowfullscreen=""></iframe>
+                      src="https://www.youtube.com/embed/VNdHd1asf9s?mute=0&amp;showinfo=0&amp;controls=0&amp;start=0"
+                      frameborder="0" allowfullscreen=""></iframe>
                   </div>
                 </div>
               </div>
@@ -352,20 +352,18 @@
   </section>
   <section class="u-clearfix u-section-4" id="sec-bfe0">
     <div class="u-clearfix u-sheet u-valign-top-md u-valign-top-sm u-sheet-1">
-      <div class="u-video u-video-contain u-video-1" data-animation-name="" data-animation-duration="0"
-        data-animation-delay="0" data-animation-direction="">
+      <div class="u-video u-video-contain u-video-1">
         <div class="embed-responsive embed-responsive-1">
           <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item"
-            src="https://player.vimeo.com/video/587652229?loop=0&amp;muted=0&amp;title=0" frameborder="0"
-            allowfullscreen=""></iframe>
+            src="https://www.youtube.com/embed/lNHLoSgCL9c?mute=0&amp;showinfo=0&amp;controls=0&amp;start=0"
+            frameborder="0" allowfullscreen=""></iframe>
         </div>
       </div>
-      <div class="u-video u-video-contain u-video-2" data-animation-name="" data-animation-duration="0"
-        data-animation-delay="0" data-animation-direction="">
+      <div class="u-video u-video-contain u-video-2">
         <div class="embed-responsive embed-responsive-2">
           <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item"
-            src="https://player.vimeo.com/video/587653311?loop=0&amp;muted=0&amp;title=0" frameborder="0"
-            allowfullscreen=""></iframe>
+            src="https://www.youtube.com/embed/i0LRtNwiORY?mute=0&amp;showinfo=0&amp;controls=0&amp;start=0"
+            frameborder="0" allowfullscreen=""></iframe>
         </div>
       </div>
       <a href="#" class="u-border-none u-btn u-btn-round u-button-style u-palette-2-light-1 u-radius-29 u-btn-1">
